technologies overflow fixed

--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -61,7 +61,7 @@
             margin-top: 1rem;
             color: $primary-color;
             font-family: 'Fira Mono';
-            font-size: 1rem;
+            font-size: 0.8rem;
             line-height: 30px;
             li{
               padding-left: 0.2rem;
